fix dark mode

--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -88,7 +88,7 @@
 
 html,
 body {
-  width: calc(100vw - 8px);
+  height: 100vh;
 }
 
 body {
